Fix selection counter on smaller screens

--- a/app/assets/stylesheets/components/message.scss
+++ b/app/assets/stylesheets/components/message.scss
@@ -131,10 +131,15 @@
   }
 
   &-selected-counter {
-    position: absolute;
-    right: 0;
-    top: $gutter - 1px;
     color: $secondary-text-colour;
+    margin: $gutter-half 0;
+
+    @include media(tablet) {
+      position: absolute;
+      right: 0;
+      top: $gutter - 1px;
+      margin: 0;
+    }
 
     .content-fixed & {
       right: $gutter-half;
